<resources>    <string name="app_name">Catalogue Movie</string>    <string name="title_home">Home</string>    <string name="title_dashboard">Dashboard</string>    <string name="title_notifications">Notifications</string>    <string name="title_upcoming">Upcoming</string>    <string name="title_search">Search</string>    <string name="title_favorite">Favorite</string>    <string name="title_settings">Settings</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="movie_title">Movie Title</string>    <string name="release_date">Release Date</string>    <string name="movie_overview">Movie Overview</string>    <string name="movie_popularity">Movie Popularity</string>    <string name="movie_rating">Movie Rating</string>    <string name="search_movie_title">Search Movie Title</string>    <string name="search">Search</string>    <string name="coming_soon">Coming Soon</string>    <string name="detail">Detail</string>    <string name="add_favorite">Add Favorite</string>    <string name="remove_favorite">Remove Favorite</string>    <string name="success_remove">Success Remove From Favorite</string>    <string name="success_saved">Adding movie to Favorite has ben Success</string>    <string name="appwidget_text">EXAMPLE</string>    <string name="add_widget">Add widget</string>    <string name="favorite_movie">Favorite Movie</string>    <string name="empty_movie_favorite">Empty Favorite Movie</string>    <string name="lang_title">Languages Settings</string>    <string name="summary_lang">Please Settings Your Localization Here</string>    <string name="lang">Language</string>    <string name="key_lang">language</string>    <string name="pref_title_notifications">Notifications Settings</string>    <string name="key_today_reminder">today_reminder</string>    <string name="summary_daily_reminder">Catalogue Movie is Missing You</string>    <string name="daily_reminder">Movie Catalogue Reminder</string>    <string name="key_release_reminder">update_reminder</string>    <string name="summary_release_reminder">This movie Has Been Release Now</string>    <string name="release_reminder">Movie Release</string>    <string name="todo">TODO</string>    <string name="name">Mei Rusfandi</string>    <string name="email">meirusfandi100@gmail.com</string>    <string name="no_hp">082281197161</string>    <string name="github">Github : meirusfandi</string>    <string name="app_version">About</string>    <string name="help">Help</string>    <string name="info">Movie Catalogue Dicoding Academy, dengan fitur Searching Movie, Upcoming Movie and Now Playing Movie, showing using Recyclerview, Cardview, gettig Retrofit RESTAPI, Picasso, Glide and CircleImage for image Holder, and Localization Feature, StackView Widgets, Notification for daily reminder and Upcoming movie Release.</string>    <string name="copyright">Copyright @ 2018 Mei Rusfandi</string>    <string name="version">App 1.0.0 Version</string>    <string name="catalogue">Movie Catalogue :</string>    <string name="bar_home">Home</string>    <string name="bar_upcoming">Upcoming Movie</string>    <string name="bar_search">Search Movie</string>    <string name="bar_favorit">Favorite List Movie</string>    <string name="bar_setting">Settings Page</string>    <string name="extra_id">extra_id</string>    <string name="extra_movie">extra_movie</string>    <string name="nothing_overview">Nothing Overview Data</string>    <string name="db_title">title</string>    <string name="db_release">release</string>    <string name="db_overview">overview</string>    <string name="db_poster">poster</string>    <string name="db_backdrop">backdrop</string>    <string name="db_rating">rate_avg</string>    <string name="db_popularity">popularity</string>    <string name="notif_name_channel">NOTIFICATION_CHANNEL_NAME</string>    <string name="error_getting_data">Terjadi kesalahan saat mengambil data movie</string>    <string name="loading_message">Searching Movie, Please Wait ....</string>    <string name="klik_help">Help di klik</string>    <string name="klik_about">About di klik</string>    <string name="success_load_data">Fetching data from API Service has been Successfully</string>    <string name="error_load_data">Error while getting data</string></resources>