<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">    <item        android:id="@+id/nav_home"        android:icon="@drawable/ic_home_black_24dp"        android:title="@string/title_home" />    <item        android:id="@+id/nav_upcoming"        android:icon="@drawable/baseline_date_range_black_48dp"        android:title="@string/title_upcoming" />    <item        android:id="@+id/nav_search"        android:icon="@drawable/baseline_search_black_48dp"        android:title="@string/title_search" />    <item        android:id="@+id/nav_favorite"        android:icon="@drawable/baseline_favorite_black_48dp"        android:title="@string/title_favorite" />    <item        android:id="@+id/nav_settings"        android:icon="@drawable/baseline_settings_black_48dp"        android:title="@string/title_settings" /></menu>