<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_margin="8dp"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context="com.meirusfandi.cataloguemovie.views.settings.SettingsFragment">    <LinearLayout        android:orientation="vertical"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <LinearLayout            android:orientation="horizontal"            android:layout_width="match_parent"            android:layout_height="160dp">            <de.hdodenhof.circleimageview.CircleImageView                android:id="@+id/image"                android:src="@drawable/poto"                android:layout_width="160dp"                android:layout_height="match_parent"                tools:ignore="VectorDrawableCompat"                android:contentDescription="@string/todo" />            <LinearLayout                android:padding="8dp"                android:orientation="vertical"                android:layout_width="match_parent"                android:layout_height="match_parent">                <TextView                    android:id="@+id/name"                    android:text="@string/name"                    android:textStyle="bold"                    android:textSize="20sp"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />                <TextView                    android:paddingBottom="4dp"                    android:paddingTop="4dp"                    android:id="@+id/email"                    android:text="@string/email"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />                <TextView                    android:paddingBottom="4dp"                    android:paddingTop="4dp"                    android:id="@+id/nohp"                    android:text="@string/no_hp"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />                <TextView                    android:id="@+id/github"                    android:text="@string/github"                    android:layout_width="match_parent"                    android:layout_height="wrap_content" />            </LinearLayout>        </LinearLayout>        <LinearLayout            android:orientation="horizontal"            android:weightSum="9"            android:layout_marginTop="16dp"            android:layout_marginBottom="8dp"            android:layout_width="match_parent"            android:layout_height="match_parent">            <android.support.v7.widget.CardView                android:layout_margin="8dp"                android:padding="8dp"                android:layout_weight="3"                android:id="@+id/settings"                android:layout_width="120dp"                android:layout_height="wrap_content">                <LinearLayout                    android:weightSum="3"                    android:orientation="vertical"                    android:layout_width="match_parent"                    android:layout_height="match_parent">                    <ImageView                        android:layout_weight="2"                        android:layout_gravity="center"                        android:src="@drawable/baseline_settings_black_48dp"                        android:layout_width="80dp"                        android:layout_height="80dp"                        android:contentDescription="@string/todo" />                    <TextView                        android:textAlignment="center"                        android:textStyle="bold"                        android:id="@+id/setting"                        android:layout_weight="1"                        android:textSize="20sp"                        android:gravity="center"                        android:text="@string/title_settings"                        android:layout_width="match_parent"                        android:layout_height="match_parent" />                </LinearLayout>            </android.support.v7.widget.CardView>            <android.support.v7.widget.CardView                android:layout_margin="8dp"                android:padding="8dp"                android:layout_weight="3"                android:id="@+id/helps"                android:layout_width="120dp"                android:layout_height="wrap_content">                <LinearLayout                    android:weightSum="3"                    android:orientation="vertical"                    android:layout_width="match_parent"                    android:layout_height="match_parent">                    <ImageView                        android:layout_weight="2"                        android:layout_gravity="center"                        android:src="@drawable/baseline_help_black_48dp"                        android:layout_width="80dp"                        android:layout_height="80dp"                        android:contentDescription="@string/todo" />                    <TextView                        android:textAlignment="center"                        android:textStyle="bold"                        android:id="@+id/help"                        android:layout_weight="1"                        android:textSize="20sp"                        android:gravity="center"                        android:text="@string/help"                        android:layout_width="match_parent"                        android:layout_height="match_parent" />                </LinearLayout>            </android.support.v7.widget.CardView>            <android.support.v7.widget.CardView                android:layout_margin="8dp"                android:padding="8dp"                android:layout_weight="3"                android:id="@+id/abouts"                android:layout_width="120dp"                android:layout_height="wrap_content">                <LinearLayout                    android:weightSum="3"                    android:orientation="vertical"                    android:layout_width="match_parent"                    android:layout_height="match_parent">                    <ImageView                        android:layout_weight="2"                        android:layout_gravity="center"                        android:src="@drawable/baseline_info_black_48dp"                        android:layout_width="80dp"                        android:layout_height="80dp"                        android:contentDescription="@string/todo" />                    <TextView                        android:textAlignment="center"                        android:textStyle="bold"                        android:id="@+id/about"                        android:layout_weight="1"                        android:textSize="20sp"                        android:gravity="center"                        android:text="@string/app_version"                        android:layout_width="match_parent"                        android:layout_height="match_parent" />                </LinearLayout>            </android.support.v7.widget.CardView>        </LinearLayout>        <TextView            android:textAlignment="center"            android:padding="8dp"            android:id="@+id/info"            android:text="@string/info"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:textAlignment="center"            android:layout_marginTop="8dp"            android:text="@string/catalogue"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:textAlignment="center"            android:text="@string/version"            android:layout_width="match_parent"            android:layout_height="wrap_content" />        <TextView            android:textAlignment="center"            android:text="@string/copyright"            android:layout_width="match_parent"            android:layout_height="wrap_content" />    </LinearLayout></ScrollView>