<?xml version="1.0" encoding="utf-8"?><android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_margin="8dp"    android:layout_width="match_parent"    android:layout_height="wrap_content">    <LinearLayout        android:orientation="horizontal"        android:layout_width="match_parent"        android:layout_height="160dp">        <ImageView            android:id="@+id/poster"            android:layout_width="120dp"            android:scaleType="fitXY"            android:layout_height="match_parent"            android:background="#04fe53"            tools:srcCompat="@drawable/ic_launcher_foreground" />        <LinearLayout            android:padding="8dp"            android:orientation="vertical"            android:layout_width="match_parent"            android:layout_height="match_parent">            <TextView                android:id="@+id/title"                tools:text="@string/movie_title"                android:textSize="30sp"                android:textStyle="bold"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/release"                tools:text="@string/release_date"                android:layout_width="match_parent"                android:layout_height="wrap_content" />            <TextView                android:id="@+id/overview"                tools:text="@string/movie_overview"                android:maxLines="5"                android:layout_width="match_parent"                android:layout_height="wrap_content" />        </LinearLayout>    </LinearLayout></android.support.v7.widget.CardView>